<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:elevation="5dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/confirmationDialogTitle"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/party_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="VVD"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/candidate_first_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1 Rutte"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/candidate_second_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="M. (Mark) (m)"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/candidate_third_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="'s Gravenhage"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/yesButton"
            style="@style/DialogPositiveButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/noButton"
            style="@style/DialogNegativeButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />

    </LinearLayout>
</LinearLayout>